# ha-deye-dehumidifier

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE.txt  README.md  hacs.json  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: hacs_validation.yml  hassfest_validation.yml  test.yml  validation.yml
custom_components/deye_dehumidifier/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  data_coordinator.py  fan.py  humidifier.py  icons.json  manifest.json  sensor.py  strings.json  switch.py
custom_components/deye_dehumidifier/translations/: en.json  pt-PT.json  vi-VN.json  zh-Hans.json  zh-Hant.json
scripts/: __init__.py  check_versions.py
