[metadata]
name = ha-deye-dehumidifier
description = Home Assistant integration for Deye Dehumidifier
author = Stackie Jia
author_email = jsq2627@gmail.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stackia/ha-deye-dehumidifier/
project_urls =
    Source = https://github.com/stackia/ha-deye-dehumidifier/
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Topic :: Home Automation


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =custom_components
python_requires = >=3.10
install_requires =
    importlib-metadata; python_version<"3.8"
    libdeye==1.1.1


[options.packages.find]
where = custom_components
exclude =
    tests

[options.extras_require]
dev =
    pre-commit
    black
    flake8
    mypy

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 120
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
